--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.1",
+    "nodemailer": "^7.0.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "9.25.1",
     "eslint-config-next": "15.3.1",
+    "i": "^0.3.7",
+    "npm": "^10.9.2",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.5",
     "typescript": "^5"
