--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "i": "^0.3.7",
     "npm": "^10.9.2",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.1.5",
     "typescript": "^5"
   }
