--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^6.7.0",
     "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.1",
     "nodemailer": "^7.0.2",
