--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.509.0",
     "next": "15.3.1",
     "nodemailer": "^7.0.2",
     "react": "^19.0.0",
