--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "@tanstack/react-query": "^5.76.0",
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
