--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,11 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files (only track the example ones)
+.env
+.env.*
+!.env.example
+!.env*.example
 
 # vercel
 .vercel
