--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "uuid": "^11.1.0",
     "zod": "^3.24.4"
   },
@@ -47,6 +48,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/webpack": "^5.28.5",
     "@vitest/browser": "^3.1.3",
     "@vitest/coverage-v8": "^3.1.3",
