--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.509.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
@@ -44,6 +45,7 @@
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4.1.6",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
