--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.7.0",
+    "@tanstack/react-form": "^1.12.4",
     "@tanstack/react-query": "^5.76.0",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
