--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.7.0",
+    "@radix-ui/react-popover": "^1.1.14",
     "@tanstack/react-form": "^1.12.4",
     "@tanstack/react-query": "^5.76.0",
     "axios": "^1.9.0",
@@ -26,6 +27,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
     "uuid": "^11.1.0",
