--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
+    "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.509.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
@@ -49,6 +50,7 @@
     "@tailwindcss/postcss": "^4.1.6",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
