--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@tanstack/react-form": "^1.12.4",
     "@tanstack/react-query": "^5.76.0",
+    "@tanstack/react-virtual": "^3.13.12",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
