--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
+    "recharts": "^3.1.2",
     "uuid": "^11.1.0",
     "zod": "^3.24.4"
   },
